[gd_scene load_steps=12 format=3 uid="uid://d02q46ihv2kqt"]

[ext_resource type="Script" path="res://addons/AdaptiSound/EditorInspector/BeatEditorPanel/layer_slot.gd" id="1_apnnm"]
[ext_resource type="Script" path="res://addons/AdaptiSound/EditorInspector/BeatEditorPanel/addon_resource_picker.gd" id="1_j4v05"]
[ext_resource type="Texture2D" uid="uid://ch58fpnj2nihr" path="res://addons/AdaptiSound/Icons/Others/AudioStreamPlayer.svg" id="3_7kt3h"]
[ext_resource type="Texture2D" uid="uid://0hkorihdf3jg" path="res://addons/AdaptiSound/Icons/Others/BeatBar.png" id="3_npdak"]
[ext_resource type="Texture2D" uid="uid://b03xj5vipdm5l" path="res://addons/AdaptiSound/Icons/Others/Snap.svg" id="5_vuho0"]
[ext_resource type="Texture2D" uid="uid://70vk1by7umv2" path="res://addons/AdaptiSound/Icons/Others/Remove.png" id="6_4htbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v31yw"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 8.0
bg_color = Color(0.168627, 0.211765, 0.266667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.270588, 0.435294, 0.580392, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlcdf"]
bg_color = Color(0.345585, 0.506353, 0.597241, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arpgo"]
bg_color = Color(0.262745, 0.419608, 0.556863, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_seuxp"]
color = Color(0.145098, 0.168627, 0.203922, 1)
thickness = 48

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6mpl8"]
color = Color(0.803922, 0.807843, 0.823529, 1)
thickness = 48

[node name="layer_slot" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_apnnm")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v31yw")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ClipSettings" type="GridContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
columns = 2

[node name="Name" type="Label" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ClipSettings"]
layout_mode = 2
text = "Layer Name"
horizontal_alignment = 2

[node name="ClipName" type="LineEdit" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ClipSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Layer Name"

[node name="ClipRe" type="Label" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ClipSettings"]
layout_mode = 2
text = "Clip File"
horizontal_alignment = 2

[node name="Clip" type="EditorResourcePicker" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ClipSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
base_type = "AudioStream"
script = ExtResource("1_j4v05")

[node name="AudioPreview" type="HBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview"]
layout_mode = 2
alignment = 1

[node name="MuteLabel" type="Label" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Mute Off"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MuteButton" type="Button" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_mlcdf")
theme_override_styles/normal = SubResource("StyleBoxFlat_arpgo")
toggle_mode = true
icon = ExtResource("3_7kt3h")
icon_alignment = 1

[node name="AudioSlider" type="VBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BarVisualizer" type="BoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/AudioSlider"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
alignment = 1

[node name="BarContainer" type="Control" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/AudioSlider/BarVisualizer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioSlider" type="HSlider" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/AudioSlider"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_npdak")
theme_override_icons/grabber_highlight = ExtResource("3_npdak")
theme_override_styles/slider = SubResource("StyleBoxLine_seuxp")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_6mpl8")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_6mpl8")
step = 0.0
scrollable = false

[node name="Time" type="VBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview"]
layout_mode = 2

[node name="Label" type="Control" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/Time"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LayerTime" type="Label" parent="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/Time"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_vertical = 3
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BottomOptions" type="HBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BottomOptions" type="HBoxContainer" parent="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions"]
layout_mode = 2
alignment = 2

[node name="Grid" type="CheckButton" parent="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions/BottomOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "Snap"
icon = ExtResource("5_vuho0")

[node name="SnapValue" type="SpinBox" parent="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions/BottomOptions"]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "x"

[node name="Erase" type="Button" parent="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions/BottomOptions"]
layout_mode = 2
text = "Remove clip"
icon = ExtResource("6_4htbd")

[connection signal="text_changed" from="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ClipSettings/ClipName" to="." method="_on_clip_name_text_changed"]
[connection signal="resource_changed" from="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ClipSettings/Clip" to="." method="_on_clip_resource_changed"]
[connection signal="toggled" from="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/VBoxContainer2/MuteButton" to="." method="_on_mute_button_toggled"]
[connection signal="drag_ended" from="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/AudioSlider/AudioSlider" to="." method="_on_audio_slider_drag_ended"]
[connection signal="drag_started" from="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/AudioSlider/AudioSlider" to="." method="_on_audio_slider_drag_started"]
[connection signal="value_changed" from="VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/AudioPreview/AudioSlider/AudioSlider" to="." method="_on_audio_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions/BottomOptions/Grid" to="." method="_on_grid_toggled"]
[connection signal="value_changed" from="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions/BottomOptions/SnapValue" to="." method="_on_snap_value_value_changed"]
[connection signal="pressed" from="VBoxContainer2/PanelContainer/VBoxContainer/BottomOptions/BottomOptions/Erase" to="." method="_on_erase_pressed"]
